Placeholder player and add player button added, font added

--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,22 @@
+:root {
+    font-family: "Silkscreen", sans-serif;
+    font-weight: 400;
+    font-style: normal;
+}
+
+/* Google font */
+.silkscreen-regular {
+  font-family: "Silkscreen", sans-serif;
+  font-weight: 400;
+  font-style: normal;
+}
+
+.silkscreen-bold {
+  font-family: "Silkscreen", sans-serif;
+  font-weight: 700;
+  font-style: normal;
+}
+
 body {
   margin: 0;
   display: flex;
