first tiles added

--- a/src/styles.css
+++ b/src/styles.css
@@ -9,7 +9,7 @@ html {
   margin: 0;
   background: #333;
   color: #e6e6e6;
-  font-family: "Silkscreen-Regular", Silkscreen-Regular Arial, Helvetica, sans-serif;
+  font-family: "Silkscreen-Regular", Arial, Helvetica, sans-serif;
 }
 
 main {
